--- a/myStyle.css
+++ b/myStyle.css
@@ -1,14 +1,81 @@
+:root{
+    font-family: 'Caveat', cursive;
+    --primary: #F2C94C;
+}
+
+body{
+    height: 100%;
+    width: 100%;
+    margin: 0 auto;
+}
+
+h1{
+    display: block;
+    background-color: var(--primary);
+    margin: 0;
+    padding: 1.5rem 0;
+    height: 100%;
+    width: 100%;
+    text-align: center;
+    font-size: xxx-large;
+}
+#page-container{
+    margin:auto;
+}
+
+#englishInput{
+    margin-top:2rem;
+}
+
 #bananaOutput, #englishInput{
     border: 1px solid black;
     height: 10vh;
+    width:50%;
     padding:0.5rem;
-    margin: 1rem;
+    margin-left: auto;
+    margin-right: auto;
+    font-size: 1.5rem;
     display: block;
-    font-size: larger;
+    font-family: 'Caveat', cursive;
 }
 
+::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+    font-family: 'Caveat', cursive;
+  }
+  ::-moz-placeholder { /* Firefox 19+ */
+    font-family: 'Caveat', cursive;
+  }
+  :-ms-input-placeholder { /* IE 10+ */
+    font-family: 'Caveat', cursive;
+  }
+  :-moz-placeholder { /* Firefox 18- */
+    font-family: 'Caveat', cursive;
+  }
+
 #btn-translate{
-    margin: 0.1rem 2rem 2rem 1rem;
-    padding: 2px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    padding: 1rem;
     display: block;
+    background-color: var(--primary);
+    border:1px solid var(--primary);
+    font-family: 'Caveat', cursive;
+    font-size: 1.5rem;
+}
+
+#footer{
+    width:100%;
+    position: absolute;
+    bottom: 0;
+    text-align: center;
+    background-color: var(--primary);
+    font-size:x-large;
+}
+
+#footer p{
+    max-width: 70%;
+    text-align: center;
+    margin: 0 auto 1.5rem auto;
 }
