--- a/myStyle.css
+++ b/myStyle.css
@@ -7,6 +7,7 @@ body{
     height: 100%;
     width: 100%;
     margin: 0 auto;
+    font-family: 'Open Sans';
 }
 
 h1{
@@ -34,15 +35,6 @@ h1{
     margin: 0 auto;
 }
 
-#wheel{
-    height: 2rem;
-    width: 2rem;
-    display: inline;
-    position: relative;
-    top:0.3rem;
-    right: 0.5rem;
-}
-
 #bananaOutput, #englishInput{
     border: 1px solid black;
     height: 10vh;
@@ -52,21 +44,7 @@ h1{
     margin-right: auto;
     font-size: 1.5rem;
     display: block;
-    font-family: 'Caveat', cursive;
 }
-
-::-webkit-input-placeholder { /* Chrome/Opera/Safari */
-    font-family: 'Caveat', cursive;
-  }
-  ::-moz-placeholder { /* Firefox 19+ */
-    font-family: 'Caveat', cursive;
-  }
-  :-ms-input-placeholder { /* IE 10+ */
-    font-family: 'Caveat', cursive;
-  }
-  :-moz-placeholder { /* Firefox 18- */
-    font-family: 'Caveat', cursive;
-  }
 
 #btn-translate{
     margin-left: auto;
@@ -77,7 +55,6 @@ h1{
     display: block;
     background-color: var(--primary);
     border:1px solid var(--primary);
-    font-family: 'Caveat', cursive;
     font-size: 1.5rem;
 }
 
