change coviscan header font

--- a/myStyle.css
+++ b/myStyle.css
@@ -19,6 +19,7 @@ h1{
     width: 100%;
     text-align: center;
     font-size: xxx-large;
+    font-family: 'Poiret One', cursive;
 }
 #page-container{
     margin:auto;
