--- a/myStyle.css
+++ b/myStyle.css
@@ -1,5 +1,5 @@
 :root{
-    font-family: 'Caveat', cursive;
+    font-family: sans-serif;
     --primary: #818CF8;
 }
 
@@ -7,6 +7,7 @@ body{
     height: 100%;
     width: 100%;
     margin: 0 auto;
+    font-family: sans-serif;
 }
 
 h1{
@@ -18,67 +19,47 @@ h1{
     width: 100%;
     text-align: center;
     font-size: xxx-large;
-}
-#page-container{
-    margin:auto;
+    font-family: sans-serif;
 }
 
-#englishInput{
-    margin-top:2rem;
-}
 
-#pirate{
+#coviscanLogo{
     height: 2.5rem;
     width:2.5rem;
     display: block;
     margin: 0 auto;
 }
-
-#wheel{
-    height: 2rem;
-    width: 2rem;
-    display: inline;
-    position: relative;
-    top:0.3rem;
-    right: 0.5rem;
+#form_content{
+    margin-top: 30px;;
+    text-align: center;
+}
+#input_name{
+    font-size: 26px;
+    margin-left: 15%;
+    border: 3px solid black;
+    border-radius: 7%;
+}
+#input_image{
+    font-size: 26px;
+    margin-left: 20px;
 }
 
-#bananaOutput, #englishInput{
-    border: 1px solid black;
-    height: 10vh;
-    width:50%;
-    padding:0.5rem;
-    margin-left: auto;
-    margin-right: auto;
-    font-size: 1.5rem;
-    display: block;
-    font-family: 'Caveat', cursive;
+#form_content button{
+        margin-top: 30px;
+        background-color: #564caf; 
+        border: none;
+        color: white;
+        padding: 15px 32px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        font-size: 22px;
+        border-radius: 9%;   
+        border: 4px solid rgb(25, 0, 255);
 }
-
-::-webkit-input-placeholder { /* Chrome/Opera/Safari */
-    font-family: 'Caveat', cursive;
-  }
-  ::-moz-placeholder { /* Firefox 19+ */
-    font-family: 'Caveat', cursive;
-  }
-  :-ms-input-placeholder { /* IE 10+ */
-    font-family: 'Caveat', cursive;
-  }
-  :-moz-placeholder { /* Firefox 18- */
-    font-family: 'Caveat', cursive;
-  }
-
-#btn-translate{
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 1rem;
-    margin-bottom: 1rem;
-    padding: 1rem;
-    display: block;
-    background-color: var(--primary);
-    border:1px solid var(--primary);
-    font-family: 'Caveat', cursive;
-    font-size: 1.5rem;
+#form-button:hover{
+    cursor: pointer;
+    opacity: 0.7;
 }
 
 #footer{
@@ -94,4 +75,9 @@ h1{
     max-width: 70%;
     text-align: center;
     margin: 0 auto 1.5rem auto;
+}
+#result-div{
+    text-align: center;
+    font-size: 40px;
+    color: chocolate;
 }
